添加跟师直播分页

--- a/wechat/src/main/webapp/xcview/html/live_personal.html
+++ b/wechat/src/main/webapp/xcview/html/live_personal.html
@@ -53,6 +53,9 @@
 		width: 6.98rem !important;
     	height: 3.94rem !important;
 	}
+	.wrap_vedio_btn li{
+		height: 3.61rem !important;
+	}
 </style>
 
 </head>
