修改跟师直播课程页----

--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -905,7 +905,7 @@
 			<!-- 跟师课程开始 -->
 			<div class="wrap_vedio_main">
 				<div class="wrap_vedio" style="padding-bottom: 0;" id="master_course">
-					<div class="master_course_skip" style="margin-top1: 0.2rem;" onclick="location.href =/xcview/html/physician/master_course.html">
+					<div class="master_course_skip" style="margin-top1: 0.2rem;" onclick="location.href ='/xcview/html/physician/master_course.html'">
 						<span class="border"></span>
 						<span style="font-size: 0.28rem;float: left;">跟师直播</span>
 						<span class="master_course_span">只有弟子能跟师直播学习</span>
@@ -1781,10 +1781,10 @@ function header_click(){
     $("body").height(body);
 
     // 点击跟师直播
-    $(".master_course_skip").click(function(){
-    	alert(212222);
+   /* $(".master_course_skip").click(function(){
+    	// alert(212222);
     	location.href ='/xcview/html/physician/master_course.html';
-    });
+    });*/
 
 </script>
 <script type="text/javascript" src="/xcview/html/physician/js/amazeui.js"></script>
