--- a/wechat/src/main/webapp/xcview/html/physician/master_course.html
+++ b/wechat/src/main/webapp/xcview/html/physician/master_course.html
@@ -126,6 +126,41 @@
 	</div>
 	<!-- 中间内容结束 -->
 
+	<!-- 师承课程提示开始 -->
+	<div class="learn_tips">
+		<div class="learn_tips_bg"></div>
+		<div class="learn_tips_main">
+			<div class="learn_tips_close">×</div>
+			<div class="learn_tips_title">温馨提示</div>
+			<div class="learn_tips_cen">该课程为师承课程，成为弟子才能开启观看权限哦~</div>
+			<div class="learn_tips_submit" onclick="location.href ='/xcview/html/physician/apply_for.html?doctor='+doctorId">在线弟子 申请加入</div>
+		</div>
+	</div>
+
+	<!-- 审核中 -->
+	<div class="learn_tips_audit">
+		<div class="learn_tips_audit_bg"></div>
+		<div class="learn_tips_audit_main">
+			<div class="learn_tips_audit_close">×</div>
+			<div class="learn_tips_audit_title">温馨提示</div>
+			<div class="learn_tips_audit_cen">该课程为师承课程，成为弟子才能开启观看权限哦~~</div>
+			<div class="learn_tips_audit_submit">弟子审核中</div>
+		</div>
+	</div>
+
+	<!-- 部分 -->
+	<div class="learn_tips_part">
+		<div class="learn_tips_part_bg"></div>
+		<div class="learn_tips_part_main">
+			<!-- <div class="learn_tips_part_close">×</div> -->
+			<div class="learn_tips_part_title">温馨提示</div>
+			<div class="learn_tips_part_cen">只有部分弟子可学习该课程~</div>
+			<div class="learn_tips_part_submit">我知道了</div>
+		</div>
+	</div>
+
+	<!-- 师承课程提示结束 -->
+
 </body>
 <script type="text/javascript" src="/xcview/js/common/jquery-2.1.1.min.js"></script>
 <script type="text/javascript" src="/xcview/js/common/mui.min.js"></script>
