地址长度提示

--- a/online-web/src/main/webapp/web/html/anchor/curriculum.html
+++ b/online-web/src/main/webapp/web/html/anchor/curriculum.html
@@ -2741,6 +2741,7 @@
 								<!--<input type="text" id="hosCity"  disabled="disabled" style="margin-bottom: 20px;"placeholder="医馆所在市区"/>-->
 							<textarea placeholder="请输入详细地址" class="name_textarea" id="u_detailAddress"></textarea>
 							<p class="warning return_warning5 hide">详细地址不能为空</p>
+							<p class="warning return_warningLength hide">详细地址长度不可超过100字</p>
 						</div>
 					
 						</div>
