跟师直播--分页样式处理

--- a/wechat/src/main/webapp/xcview/html/physician/master_course.html
+++ b/wechat/src/main/webapp/xcview/html/physician/master_course.html
@@ -76,6 +76,38 @@
 	.learn_tips_part{
 		z-index: 9;
 	}
+	.wrap_vedio_btn li .speak_text{
+		height: 0.8rem;
+	}
+
+	.minirefresh-wrap{
+		top: 0.88rem !important;
+	}
+	.wrap_vedio_btn li .speak_name{
+		padding-top: 0;
+	}
+
+	/*处理刷新*/
+	.minirefresh-wrap{
+		/*top: 5.3rem;*/
+	}
+	.minirefresh-theme-default .minirefresh-downwrap{
+		height: 1rem;
+		line-height: 1rem;
+	}
+	.minirefresh-theme-default .downwrap-content{
+		padding: 0;
+	}
+	.minirefresh-theme-default .minirefresh-upwrap{
+		height: 1rem;
+		max-height: 0.5rem;
+		line-height: 0.6rem;
+		padding: 0;
+		/*margin-top: -0.5rem;*/
+	}
+	.minirefresh-scroll{
+		background: none;
+	}
 
 </style>
 
