--- a/wechat/src/main/webapp/xcview/html/details_wy.html
+++ b/wechat/src/main/webapp/xcview/html/details_wy.html
@@ -306,7 +306,7 @@ $(function(){
 			<div class="grabble_top">
 				
 				<div class="grabble_left" onclick="isLoginJump()">  <!--onclick="isLoginJump()" ---这是上一版的返回点击事件   --> <!-- onclick="window.history.go(-1);" 这版 -->   
-					<div class="grabble_img"><img src="/xcview/images/images/back icon.png" alt="" /></div>
+					<div class="grabble_img"><img src="../images/back icon.png" alt="" /></div>
 				</div>
 
 				<span class="history_span"></span>
@@ -434,7 +434,7 @@ $(function(){
 				</p>
 			</div>
 			<div class="add_follow add_follow00" id="add_follow" data-lecturerid="23908ae85dad4541ba7ecf53fc52aab2">
-				<img src="/xcview/images/weigz.png">
+				<img src="../images/weigz.png">
 				<p>加关注</p>
 			</div>
 			<div class="close">×</div>
@@ -454,7 +454,7 @@ $(function(){
 	<div class="coze_bottom" style="padding: 0.3rem 0;">
 		<div class="coze_bottom_input" style="margin-right: 0;">
 			<div class="div_img">
-				<img src="/xcview/images/inp_retured.png" class="img_left" />
+				<img src="../images/inp_retured.png" class="img_left" />
 			</div>
 			
 
@@ -507,13 +507,13 @@ $(function(){
 					</li>-->
 					<li>
 						<div class="" id="qqShare">
-							<img src="/xcview/images/Qzone_share.png" />
+							<img src="../images/Qzone_share.png" />
 							<p>qq空间</p>
 						</div>
 					</li>
 					<li>
 						<div class="" id="qqShare0">
-							<img src="/xcview/images/RSS_links.png" />
+							<img src="../images/RSS_links.png" />
 							<p>新浪微博</p>
 						</div>
 					</li>
@@ -602,7 +602,7 @@ $(function(){
 				</p>
 			</div>
 			<div class="add_follow add_follow00" id="add_follow1" data-lecturerid="23908ae85dad4541ba7ecf53fc52aab2">
-				<img src="/xcview/images//weigz.png">
+				<img src="../images/weigz.png">
 				<p>加关注</p>
 			</div>
 			
@@ -624,7 +624,7 @@ $(function(){
 				</p>
 			</div>
 			<div class="add_follow">
-				<img src="/xcview/images/weigz.png">
+				<img src="../images/weigz.png">
 				<p>加关注</p>
 			</div>
 		</div>
