--- a/wechat/src/main/webapp/xcview/html/physician/master_course.html
+++ b/wechat/src/main/webapp/xcview/html/physician/master_course.html
@@ -154,15 +154,23 @@
 								<p style="font-size: 0.22rem;margin-top: 0.03rem;" class="money_status z"><span>{{item.currentPrice}}</span>熊猫币</p>
 							{{/if}}
 
+							<!--当天-->
 							<p class="more_people z">
 								<img src="/xcview/images/Sinatv_time.png">
-								<span class="more_people_time">{{item.startTime.slice(0,16)}}</span>
+								<span class="more_people_time">{{item.startTime.slice(11,16)}}</span>
+							</p>
+
+							<!--之前，之后-->
+							<p class="more_people z" style="display: none;">
+								<img src="/xcview/images/learn.png">
+								<span class="more_people_time">{{item.startTime.slice(5,11)}}</span>
 							</p>
 						</div>
 					</li>
 				{{/each}}
 				</script>
 			</ul>
+			<!-- /xcview/images/learn.png -->
 		</div>
 			</div>
 		</div>
