处理直播中无状态--课程有状态100%高度处理

--- a/wechat/src/main/webapp/xcview/html/physician/master_course.html
+++ b/wechat/src/main/webapp/xcview/html/physician/master_course.html
@@ -161,10 +161,10 @@
 							</p>
 
 							<!--之前，之后-->
-							<p class="more_people z" style="display: none;">
+							<!--<p class="more_people z " style="display: none;">
 								<img src="/xcview/images/learn.png">
 								<span class="more_people_time">{{item.startTime.slice(5,11)}}</span>
-							</p>
+							</p>-->
 						</div>
 					</li>
 				{{/each}}
