--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -538,7 +538,7 @@
 		</div>
 		<!-- 点击全部动态=显示筛看结束 -->
 
-		<div class="rests_nav">
+		<div class="rests_nav" style="height: 100% !important;">
 
 			<script type="text/html" id="wrap_doctor_dynamics">
 				{{each items as item i}}
@@ -664,7 +664,7 @@
 					<div class="both"></div>
 				</div>
 				{{else if item.typeId != null && item.typeId == 8}}
-				<div class="consilia_nav_span_div">
+				<div class="consilia_nav_span_div" style="">
 					<!-- 医案-->
 					<div class="consilia_nav_span comment_hide">
 						{{if item.stick}}
