师承--跟师直播，跳转分页

--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -1081,7 +1081,7 @@
 		<!-- 跟师课程开始 -->
 		<div class="wrap_vedio_main">
 			<div class="wrap_vedio" style="padding-bottom: 0;" id="master_course">
-				<div class="" style="margin-top1: 0.2rem;">
+				<div class="" style="margin-top1: 0.2rem;" onclick="location.href ='/xcview/html/physician/master_course.html?doctor='+doctorId">
 					<span class="border"></span>
 					<span style="font-size: 0.28rem;float: left;">跟师直播</span>
 					<span class="master_course_span">只有弟子能跟师直播学习</span>
