增加获取微吼云自定义消息

--- a/wechat/src/main/webapp/demo/tmp.html
+++ b/wechat/src/main/webapp/demo/tmp.html
@@ -282,15 +282,6 @@ $(function(){
 .coze_bottom input{
     color: #333;
 }
-
-#myVideo{
-    width: 100%;
-    height: 4.24rem;
-    margin-top: 0.88rem;
-    background: #000;
-    opacity: 1;
-}
-
 </style>
 </head>
 <body style="background: #f8f8f8;overflow: hidden1;">
@@ -665,8 +656,11 @@ $(function(){
     <!-- 排行榜结束 -->
     <!-- 文档开始 -->
     <div class="document" style="margin-top: 3.74rem;">
+        <!-- <div class="fd_img">
+            <div class="fd_img_bg"></div>
+            <p>此课程还没课件</p>
+        </div> -->
         <div class="document_ceneter" id="my-doc-area">
-            
             <div class="both"></div>
         </div>
         <div class="both"></div>
@@ -742,16 +736,14 @@ $(function(){
 <!-- <script type="text/javascript" src="/xcview/js/common/strophe.js"></script>
 <script type="text/javascript" src="/xcview/js/im/giftSend.js"></script> -->
 <!-- <script src="./styles/jquery-3.2.1.min.js"></script> -->
-<script src="https://static.vhallyun.com/jssdk/vhall-jssdk-chat-1.0.0.js?v=201801121522"></script>
 <script src="https://static.vhallyun.com/jssdk/vhall-jssdk-doc-1.0.0.js?v=201806271657"></script>
 <script src="https://static.vhallyun.com/jssdk/dvideo-plugin.js?v=0.3"></script>
 <script src="https://static.vhallyun.com/jssdk/vhall-jssdk-live-1.0.0.js?v=201806271657"></script>
 <script src="https://static.vhallyun.com/jssdk/vhall-jssdk-base-1.0.0.js?v=201806271657"></script>
 
-
 <script src="/demo/js/vhallyun.js"></script>
 
-<script type="text/javascript" src="/xcview/js/details_change.js"></script>
+ <script type="text/javascript" src="/xcview/js/details_change.js"></script>
 <script type="text/javascript" src="/xcview/js/details.js"></script>
 
 
