--- a/online-web/src/main/webapp/web/html/anchor/curriculum.html
+++ b/online-web/src/main/webapp/web/html/anchor/curriculum.html
@@ -2603,7 +2603,7 @@
 					<div class="two" id="detailAddress"></div>
 				</div>
 			</div>
-			<div class="account_main message_return hide">
+			<div class="account_main message_return hide" style="margin-bottom: 30px;">
 				<div class="message_title">
 					<div class="one">主播信息修改</div>
 					<div class="two">返回</div>
@@ -2739,7 +2739,7 @@
 								<!--<p class="warning return_warning6 hide" style="margin-top: -20px;margin-bottom: 0px;">请填写正确省份信息</p>-->
 								<!--<input type="text" id="hosPro"  disabled="disabled" style="margin-bottom: 20px;" placeholder="医馆所在省份"/>-->
 								<!--<input type="text" id="hosCity"  disabled="disabled" style="margin-bottom: 20px;"placeholder="医馆所在市区"/>-->
-							<textarea placeholder="请输入详细地址" class="name_textarea" id="u_detailAddress"></textarea>
+							<textarea placeholder="请输入详细地址" maxlength="100" class="name_textarea" id="u_detailAddress"></textarea>
 							<p class="warning return_warning5 hide">详细地址不能为空</p>
 							<p class="warning return_warningLength hide">详细地址长度不可超过100字</p>
 						</div>
