跟师直播--修改时间判断。之前，没有添加针对哪个课程的时间。。当天显示时间，之前之后显示日期

--- a/wechat/src/main/webapp/xcview/html/physician/master_course.html
+++ b/wechat/src/main/webapp/xcview/html/physician/master_course.html
@@ -109,7 +109,7 @@
 		background: none;
 	}
 	.more_people{
-		display: none;
+		/*display: none;*/
 	}
 
 </style>
@@ -157,19 +157,19 @@
 								<p style="font-size: 0.22rem;margin-top: 0.03rem;" class="money_status z"><span>{{item.currentPrice}}</span>熊猫币</p>
 							{{/if}}
 
-							<!--当天-->
-							<p class="more_people z time_z">
-								<img src="/xcview/images/Sinatv_time.png">
-								<span class="more_people_time">{{item.startTime.slice(11,16)}}</span>
-								<span class="more_people_times" style="opacity: 0;">{{item.startTime.slice(8,10)}}</span>
-							</p>
-
-
-							<!--之前，之后-->
-							<p class="more_people z date_z">
-								<img src="/xcview/images/learn.png">
-								<span class="more_people_time more_peoples_times">{{item.startTime.slice(5,11)}}</span>
-							</p>
+							{{if item.isday=='y'}}
+								<!--当天-->
+								<p class="more_people z time_z">
+									<img src="/xcview/images/Sinatv_time.png">
+									<span class="more_people_time">{{item.startDateStr}}</span>
+								</p>
+								{{else}}
+								<!--之前，之后-->
+								<p class="more_people z date_z">
+									<img src="/xcview/images/learn.png">
+									<span class="more_people_time more_peoples_times">{{item.startDateStr.slice(5,11)}}</span>
+								</p>
+							{{/if}}
 						</div>
 					</li>
 				{{/each}}
