--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -911,10 +911,10 @@
 					<ul class="wrap_vedio_btn" id="teacher_hides">
 						<script type="text/html" id="teacher_hide_ids">
 						{{each items as item i}}			
-							<li style="position: relative;">
+							<li class="wrap_vedio_btn_{{item.id}} wrap_vedio_btn_id" style="position: relative;" data-id-time="{{item.id}}">
 						       <a style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; z-index: 999;" onclick="jumpTeachingCourse({{item.id}},{{item.teaching}})"></a>
 						        {{if item.lineState == 1}}
-								    <p style="position: absolute;right: 0;top: 0;    border-radius: 0 0 0 3px;float: left;font-size: 0.22rem;padding: 0rem 0.1rem;color: #fff !important;margin-top: -0.02rem;background: #f97b49;z-index: 1;">直播中</p>
+								    <p style="position: absolute;right: 0;top: 0;border-radius: 0 0 0 3px;float: left;font-size: 0.22rem;padding: 0rem 0.1rem;color: #fff !important;margin-top: -0.02rem;background: #f97b49;z-index: 1;">直播中</p>
 								{{/if}}
 								<p class="wrap_img_pic">
 									
@@ -930,20 +930,19 @@
 									{{else}}
 										<p style="font-size: 0.22rem;margin-top: 0.03rem;" class="money_status z"><span>{{item.currentPrice}}</span>熊猫币</p>
 									{{/if}}
-
+									{{if item.isday=='y'}}
 									<!--当天-->
 									<p class="more_people z time_z">
 										<img src="/xcview/images/Sinatv_time.png">
-										<span class="more_people_time">{{item.startTime.slice(11,16)}}</span>
-										<span class="more_people_times" style="opacity: 0;">{{item.startTime.slice(8,10)}}</span>
+										<span class="more_people_time">{{item.startDateStr}}</span>
 									</p>
-
+									{{else}}
 									<!--之前，之后-->
 									<p class="more_people z date_z">
 										<img src="/xcview/images/learn.png">
-										<span class="more_people_time more_peoples_times">{{item.startTime.slice(5,11)}}</span>
+										<span class="more_people_time more_peoples_times">{{item.startDateStr.slice(5,11)}}</span>
 									</p>
-									
+									{{/if}}
 								</div>
 							</li>
 						{{/each}}
@@ -1085,7 +1084,7 @@
 					<span class="border"></span>
 					<span style="font-size: 0.28rem;float: left;">跟师直播</span>
 					<span class="master_course_span">只有弟子能跟师直播学习</span>
-					<!-- <img src="/xcview/images/video_review.png" alt="" class="" /> -->
+					<img src="/xcview/images/video_review.png" alt="" class="" style="width: 0.15rem;float: right;margin-top: 0.09rem;" />
 					<div class="both"></div>
 				</div>
 				<ul class="wrap_vedio_btn" id="teacher_hide">
@@ -1111,18 +1110,19 @@
 									<p style="font-size: 0.22rem;margin-top: 0.03rem;" class="money_status z"><span>{{item.currentPrice}}</span>熊猫币</p>
 								{{/if}}
 
-								<!--当天-->
-								<p class="more_people z time_z">
-									<img src="/xcview/images/Sinatv_time.png">
-									<span class="more_people_time">{{item.startTime.slice(11,16)}}</span>
-									<span class="more_people_times" style="opacity: 0;">{{item.startTime.slice(8,10)}}</span>
-								</p>
-
-								<!--之前，之后-->
-								<p class="more_people z date_z">
-									<img src="/xcview/images/learn.png">
-									<span class="more_people_time more_peoples_times">{{item.startTime.slice(5,11)}}</span>
-								</p>
+								{{if item.isday=='y'}}
+									<!--当天-->
+									<p class="more_people z time_z">
+										<img src="/xcview/images/Sinatv_time.png">
+										<span class="more_people_time">{{item.startDateStr}}</span>
+									</p>
+									{{else}}
+									<!--之前，之后-->
+									<p class="more_people z date_z">
+										<img src="/xcview/images/learn.png">
+										<span class="more_people_time more_peoples_times">{{item.startDateStr.slice(5,11)}}</span>
+									</p>
+								{{/if}}
 							</div>
 						</li>
 					{{/each}}
