--- a/online-web/src/main/webapp/web/html/liveVideo.html
+++ b/online-web/src/main/webapp/web/html/liveVideo.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+﻿3<!DOCTYPE html>
 <html>
 
 <head>
@@ -499,8 +499,9 @@
 <script src=//cnstatic01.e.vhall.com/3rdlibs/mCustomScrollbar/3.0.8/jquery.mCustomScrollbar.concat.min.js></script>
 <script src="/web/js/vhall/vhallSDK.js" type="text/javascript"
 	charset="utf-8"></script>
-<script src="/web/js/vhall/vhall_demo_custom.js" type="text/javascript" charset="utf-8"></script> 
-<script src="/web/js/artTemplate.js" type="text/javascript"
+		<script src="/web/js/vhall/vhall_demo_custom.js"
+			type="text/javascript" charset="utf-8"></script>
+		<script src="/web/js/artTemplate.js" type="text/javascript"
 	charset="utf-8"></script>
 <script type="text/javascript" src="/web/js/bootstrap.js"></script>
 <script src="/web/js/ajaxfileupload.js"></script>
