完善jssdk自定义消息

--- a/wechat/src/main/webapp/demo/details.html
+++ b/wechat/src/main/webapp/demo/details.html
@@ -742,7 +742,7 @@ $(function(){
 <!-- <script type="text/javascript" src="/xcview/js/common/strophe.js"></script>
 <script type="text/javascript" src="/xcview/js/im/giftSend.js"></script> -->
 <!-- <script src="./styles/jquery-3.2.1.min.js"></script> -->
-<script type="text/javascript" src="/demo/js/giftSend2.js"></script> -->
+<script type="text/javascript" src="/demo/js/giftSend2.js"></script>
 <script src="https://static.vhallyun.com/jssdk/vhall-jssdk-chat-1.0.0.js?v=201801121522"></script>
 <script src="https://static.vhallyun.com/jssdk/vhall-jssdk-doc-1.0.0.js?v=201806271657"></script>
 <script src="https://static.vhallyun.com/jssdk/dvideo-plugin.js?v=0.3"></script>
