--- a/wechat/src/main/webapp/demo/gkzb1.html
+++ b/wechat/src/main/webapp/demo/gkzb1.html
@@ -12,6 +12,7 @@
   <script src="./js/clipboard.js"></script>
   <script src="./js/toc.js"></script>
   <script src="./js/test.js"></script>
+  <script src="https://static.vhallyun.com/jssdk/vhall-jssdk-chat-1.0.0.js?v=201801121522"></script>
   <script src="https://static.vhallyun.com/jssdk/dvideo-plugin.js?v=201806132033"></script><!--依赖的播放器资源-->
   <script src="https://static.vhallyun.com/jssdk/vhall-jssdk-player-1.0.0.js?v=201806132033"></script>
   <script src="https://static.vhallyun.com/jssdk/vhall-jssdk-base-1.0.0.js?v=201806132033"></script>
