--- a/online-web/src/main/webapp/web/html/liveVideo2.html
+++ b/online-web/src/main/webapp/web/html/liveVideo2.html
@@ -494,8 +494,11 @@
 			{{/each}}
 		</script>
 <script src=//cnstatic01.e.vhall.com/3rdlibs/mCustomScrollbar/3.0.8/jquery.mCustomScrollbar.concat.min.js></script>
-<script src="/web/js/vhall/vhallSDK.js" type="text/javascript" charset="utf-8"></script>
-<script src="/web/js/vhall/vhall_demo_custom.js" type="text/javascript" charset="utf-8"></script>
+
+<!-- <script src="/web/js/vhall/vhallSDK.js" type="text/javascript" charset="utf-8"></script>
+<script src="/web/js/vhall/vhall_demo_custom.js" type="text/javascript" charset="utf-8"></script> -->
+
+
 <script src="/web/js/artTemplate.js" type="text/javascript" charset="utf-8"></script>
 <script type="text/javascript" src="/web/js/bootstrap.js"></script>
 <script src="/web/js/ajaxfileupload.js"></script>
@@ -505,6 +508,11 @@
 <script src="/web/js/utf.js" type="text/javascript" charset="utf-8"></script>
 
 
+<!-- <script src="/web/js/im/strophe.js" type="text/javascript" charset="utf-8"></script> -->
+<script src="/web/js/common/common.js" type="text/javascript" charset="utf-8"></script>
+<script src="/web/js/im/giftSend.js?v=ipandatcm_1.3" type="text/javascript" charset="utf-8"></script>
+
+
 <script src="https://static.vhallyun.com/jssdk/vhall-jssdk-chat-1.0.0.js?v=201801121522"></script>
 <script src="https://static.vhallyun.com/jssdk/vhall-jssdk-doc-1.0.0.js?v=201806271657"></script>
 <script src="https://static.vhallyun.com/jssdk/dvideo-plugin.js?v=0.3"></script>
@@ -512,13 +520,11 @@
 <script src="https://static.vhallyun.com/jssdk/vhall-jssdk-base-1.0.0.js?v=201806271657"></script>
 
 
-<!-- <script src="/web/js/im/strophe.js" type="text/javascript" charset="utf-8"></script> -->
-
-<script src="/web/js/common/common.js" type="text/javascript" charset="utf-8"></script>
-<script src="/web/js/im/giftSend.js?v=ipandatcm_1.3" type="text/javascript" charset="utf-8"></script>
 
 <script src="/web/js/liveVideo/liveVideo.js?v=ipandatcm_1.3"></script>
 <script src="/web/js/liveVideo/liveVideoSDK.js?v=ipandatcm_1.3"></script>
+
+<script src="/web/js/liveVideo/vhallyun.js?v=ipandatcm_1.3"></script>
 
 
 <script src="/web/js/common/video_share.js?v=ipandatcm_1.3"></script>
