--- a/online-web/src/main/webapp/web/html/liveVideo2.html
+++ b/online-web/src/main/webapp/web/html/liveVideo2.html
@@ -28,7 +28,7 @@
 	href=//cnstatic01.e.vhall.com/3rdlibs/mCustomScrollbar/3.0.8/jquery.mCustomScrollbar.min.css>
 <link href="/web/js/vhall/nihao.css" rel="stylesheet" type="text/css" />
 
-<script src="http://cnstatic01.e.vhall.com/3rdlibs/jquery/1.11.2/jquery.min.js" type="text/javascript"></script>
+<script src="/web/js/jquery.min.js" type="text/javascript"></script>
 <script src="/web/js/common_msg.js" type="text/javascript"></script>
 <script>
 </script>
@@ -199,9 +199,10 @@
 					</div>
 				</div>
 				<div class=player-container>
-					<div class=video id=video></div>
-					<div class="doc doc-img" id=doc ></div>
-					
+					<!-- <div class=video id=video></div>
+					<div class="doc doc-img" id=doc ></div> -->
+					<div class=video id="myVideo"></div>
+                    <div class="doc doc-img" id="my-doc-area" ></div>
 				</div>
 				
 				<div class=container>
@@ -510,16 +511,15 @@
 
 <!-- <script src="/web/js/im/strophe.js" type="text/javascript" charset="utf-8"></script> -->
 <script src="/web/js/common/common.js" type="text/javascript" charset="utf-8"></script>
-<script src="/web/js/im/giftSend.js?v=ipandatcm_1.3" type="text/javascript" charset="utf-8"></script>
+<script src="/web/js/im/giftSend2.js?v=ipandatcm_1.3" type="text/javascript" charset="utf-8"></script>
 
+<!-- 微吼云 -->
 
 <script src="https://static.vhallyun.com/jssdk/vhall-jssdk-chat-1.0.0.js?v=201801121522"></script>
 <script src="https://static.vhallyun.com/jssdk/vhall-jssdk-doc-1.0.0.js?v=201806271657"></script>
 <script src="https://static.vhallyun.com/jssdk/dvideo-plugin.js?v=0.3"></script>
 <script src="https://static.vhallyun.com/jssdk/vhall-jssdk-live-1.0.0.js?v=201806271657"></script>
 <script src="https://static.vhallyun.com/jssdk/vhall-jssdk-base-1.0.0.js?v=201806271657"></script>
-
-
 
 <script src="/web/js/liveVideo/liveVideo.js?v=ipandatcm_1.3"></script>
 <script src="/web/js/liveVideo/liveVideoSDK.js?v=ipandatcm_1.3"></script>
