--- a/wechat/src/main/webapp/demo/details.html
+++ b/wechat/src/main/webapp/demo/details.html
@@ -294,7 +294,7 @@ $(function(){
 /* 新加文档 */
 .pinch-zoom-container{
     min-height: 4rem !important;
-    /* background: red; */
+    background: red;
 }
 .pinch-zoom-container-addclass{
     display: block !important;
@@ -765,10 +765,10 @@ $(function(){
 <script type="text/javascript" src="/xcview/js/im/giftSend.js"></script> -->
 <!-- <script src="./styles/jquery-3.2.1.min.js"></script> -->
 <script type="text/javascript" src="/demo/js/giftSend2.js"></script>
-<script src="https://static.vhallyun.com/jssdk/vhall-jssdk-chat-1.0.0.js?v=201801121522"></script>
-<script src="https://static.vhallyun.com/jssdk/vhall-jssdk-doc-1.0.0.js?v=201806271657"></script>
-<script src="https://static.vhallyun.com/jssdk/dvideo-plugin.js?v=0.3"></script>
 <script src="https://static.vhallyun.com/jssdk/vhall-jssdk-live-1.0.0.js?v=201806271657"></script>
+<script src="https://static.vhallyun.com/jssdk/vhall-jssdk-doc-1.0.0.js?v=201806271657"></script>
+<script src="https://static.vhallyun.com/jssdk/vhall-jssdk-chat-1.0.0.js?v=201801121522"></script>
+<script src="https://static.vhallyun.com/jssdk/dvideo-plugin.js?v=0.3"></script>
 <script src="https://static.vhallyun.com/jssdk/vhall-jssdk-base-1.0.0.js?v=201806271657"></script>
 
 <script src="/demo/js/vhallyun.js"></script>
@@ -780,7 +780,6 @@ $(function(){
 
 <script type="text/javascript">
     window.onload = function(){
-        /* 默认点击图片 */
     	$(".document_ceneter img").click();
     	
         $(".video_end_top1 .div img").click(function(){
