--- a/wechat/src/main/webapp/demo/gkzb_doc.html
+++ b/wechat/src/main/webapp/demo/gkzb_doc.html
@@ -61,10 +61,10 @@
           });
 
           /**
-           * 初始化聊天对象ch_fc6f51f4
+           * 初始化聊天对象ch_d260ab70
            */
           window.chat = new VhallChat({
-             channelId:'ch_fc6f51f4'//频道Id，必填
+             channelId:'ch_d260ab70'//频道Id，必填
           });
           
           /**
@@ -125,7 +125,7 @@
           var isProd = window.location.href.indexOf('vhallyun.com') > -1;
           if(!isProd){
               $('#ipt-appId').val('27376e92');
-              $('#ipt-channelId').val('ch_fc6f51f4');
+              $('#ipt-channelId').val('ch_d260ab70');
           }
 
           $('#btn-set-init').on('click',function(){
@@ -197,7 +197,7 @@
         <div class="navbar-form">
             <div class="row">
                 <label>token:</label>
-                <input value="access:27376e92:798807b652f03baf" id="ipt-token" type="text" class="form-control" placeholder="token">
+                <input value="access:27376e92:8520e066f987ba58" id="ipt-token" type="text" class="form-control" placeholder="token">
             </div>
             <div class="row">
                 <label>appId:</label>
@@ -206,11 +206,11 @@
             <div class="row">
                 <label>roomId:</label>
                 <!-- <input value="lss_22b89748" id="ipt-roomId" type="text" class="form-control" placeholder="roomId"> -->
-                <input value="lss_ad04fdfe" id="ipt-roomId" type="text" class="form-control" placeholder="roomId">
+                <input value="lss_508dc5c6" id="ipt-roomId" type="text" class="form-control" placeholder="roomId">
             </div>
             <div class="row">
                 <label>channelId:</label>
-                <input value="ch_fc6f51f4" id="ipt-channelId" type="text" class="form-control" placeholder="channelId">
+                <input value="ch_d260ab70" id="ipt-channelId" type="text" class="form-control" placeholder="channelId">
             </div>
             <div class="row">
                 <label>文档区域宽:</label>
