--- a/wechat/src/main/webapp/demo/message2.html
+++ b/wechat/src/main/webapp/demo/message2.html
@@ -69,7 +69,7 @@
                  Vhall.config({
                      appId :'27376e92',//应用 ID ,必填
                      accountId :'test_jssdk',//第三方用户唯一标识,必填
-                     token:'access:27376e92:07c8cb19a294f6fe',//token必填
+                     token:'access:27376e92:8c47c95b7cbc26cd',//token必填
                  })     
               </textarea>
               </p>
@@ -87,7 +87,7 @@
               <p>
                 <textarea data-label="VhallChat" class="form-control" >
                   window.chat = VhallChat({
-                    channelId:'ch_fc6f51f4'
+                    channelId:'ch_d260ab70'
                   }) 
                 </textarea>
               </p>
