修改直播间样式

--- a/online-web/src/main/webapp/web/html/live-room/live-room.html
+++ b/online-web/src/main/webapp/web/html/live-room/live-room.html
@@ -209,7 +209,7 @@
 			  						<img class="select-img" src="/web/images/live-room/xiaosanjiao.png" alt="下拉选择" />
 			  					</div>
 			  					<div class="tip-tool hide">
-			  						<span>画笔</span>
+			  						<span>颜色</span>
 			  					</div>
 			  					<div class="select-huabi hide">
 			  						<p class="comment-bg comment-color other-one">
