--- a/online-web/src/main/webapp/web/html/anchor/curriculum.html
+++ b/online-web/src/main/webapp/web/html/anchor/curriculum.html
@@ -902,7 +902,7 @@
 									<script id="editor_cd" type="text/plain" style="width:540px;height:260px;"></script></div>
 								<p class="warning warning_course_details hide">课程介绍不能为空</p>
 							</div>
-							<div id="resourceType" class="sheng vod special">
+							<div id="resourceType" class="sheng vod live special">
 								<span><em>*</em>资源类型</span>
 								<label>
 									<input type="radio" name="course_multimedia_type" value="1" onclick="initResource(1)" checked="checked" />视频
