--- a/wechat/src/main/webapp/demo/details.html
+++ b/wechat/src/main/webapp/demo/details.html
@@ -750,20 +750,15 @@ $(function(){
 <script type="text/javascript" src="/xcview/js/common/mui.min.js"></script>
 
 <script type="text/javascript" src="/xcview/js/common/alertPopShow.js"></script>
-<!-- <link rel="stylesheet" href="/xcview/css/yangxuan.css"> -->
 <!--这段meta代码需要加上，移动端自适应缩放用-->
 <!--这段JS就是自动检测窗口尺寸大小的，动态改变html的font-size的大小-->
 
-<!-- <script type="text/javascript" src="/xcview/js/common/jquery-1.8.3.min.js"></script> -->
 <script src="/xcview/weihoujs/vhallSDK.js"></script>
 <script src="/xcview/weihoujs/jquery.mCustomScrollbar.concat.min.js"></script>
 <script src="/xcview/weihoujs/underscore-min.js"></script>
-<!-- <script type="text/javascript" src="/xcview/js/common/weihoudetails.js"></script> -->
 <script type="text/javascript" src="/xcview/js/common/common.js"></script>
 
-<!-- <script type="text/javascript" src="/xcview/js/common/strophe.js"></script>
-<script type="text/javascript" src="/xcview/js/im/giftSend.js"></script> -->
-<!-- <script src="./styles/jquery-3.2.1.min.js"></script> -->
+
 <script type="text/javascript" src="/demo/js/giftSend2.js"></script>
 <script src="https://static.vhallyun.com/jssdk/vhall-jssdk-live-1.0.0.js?v=201806271657"></script>
 <script src="https://static.vhallyun.com/jssdk/vhall-jssdk-doc-1.0.0.js?v=201806271657"></script>
@@ -771,11 +766,11 @@ $(function(){
 <script src="https://static.vhallyun.com/jssdk/dvideo-plugin.js?v=0.3"></script>
 <script src="https://static.vhallyun.com/jssdk/vhall-jssdk-base-1.0.0.js?v=201806271657"></script>
 
-<script src="/demo/js/vhallyun.js"></script>
-
+<!-- 部分点击事件 -->
 <script type="text/javascript" src="/xcview/js/details_change.js"></script>
+<!--  -->
 <script type="text/javascript" src="/xcview/js/details.js"></script>
-
+<script src="/demo/js/vhallyun.js"></script>
 
 
 <script type="text/javascript">
