完善直播间消息接口

--- a/wechat/src/main/webapp/demo/details.html
+++ b/wechat/src/main/webapp/demo/details.html
@@ -768,8 +768,7 @@ $(function(){
 
 <!-- 部分点击事件 -->
 <script type="text/javascript" src="/xcview/js/details_change.js"></script>
-<!--  -->
-<script type="text/javascript" src="/xcview/js/details.js"></script>
+<script type="text/javascript" src="/demo/js/details.js"></script>
 <script src="/demo/js/vhallyun.js"></script>
 
 
