--- a/online-web/src/main/webapp/web/html/live-room/live-room.html
+++ b/online-web/src/main/webapp/web/html/live-room/live-room.html
@@ -256,6 +256,12 @@
 			  		<!--视频模块-->
 			  		<div class="video-main">
 			  			
+			  			<!--pages分页-->
+			  			<div class="pages">
+			  				<span class="prve">上一页</span>
+			  				<span class="next">下一页</span>
+			  				<p class="jump-pages">跳到<input maxlength="4" type="text">页<button type="button">确定</button></p>
+			  			</div>
 			  		</div>
 			  		<!--开始播放按钮模块-->
 			  		<div class="play-main text-center">
