直播间画笔

--- a/online-web/src/main/webapp/web/html/live-room/live-room.html
+++ b/online-web/src/main/webapp/web/html/live-room/live-room.html
@@ -213,22 +213,22 @@
 			  					</div>
 			  					<div class="select-huabi hide">
 			  						<p class="comment-bg comment-color other-one">
-			  							<img src="/web/images/live-room/color1.png"/>
+			  							<img src="/web/images/live-room/color1.png" data-color="#d900ae" />
 			  						</p>
 			  						<p class="comment-bg comment-color other-two">
-			  							<img src="/web/images/live-room/color6.png"/>
+			  							<img src="/web/images/live-room/color6.png" data-color="#0063db" />
 			  						</p>
 			  						<p class="comment-bg comment-color other-three">
-			  							<img src="/web/images/live-room/color4.png"/>
+			  							<img src="/web/images/live-room/color4.png" data-color="#00c900" />
 			  						</p>
 			  						<p class="comment-bg comment-color other-four">
-			  							<img src="/web/images/live-room/color3.png"/>
+			  							<img src="/web/images/live-room/color3.png" data-color="#ffc800" />
 			  						</p>
 			  						<p class="comment-bg comment-color other-five">
-			  							<img src="/web/images/live-room/color2.png"/>
+			  							<img src="/web/images/live-room/color2.png" data-color="#ff0000" />
 			  						</p>
 			  						<p class="comment-bg comment-color other-six">
-			  							<img src="/web/images/live-room/color5.png"/>
+			  							<img src="/web/images/live-room/color5.png" data-color="#000000" />
 			  						</p>
 			  					</div>
 			  					
