发现--师承，我要报名优化修改。中医师，下线课，ui优化。学习--我的课程--已结束课程--刷新修改。中医师--申请弟子修改。

--- a/wechat/src/main/webapp/xcview/html/bought.html
+++ b/wechat/src/main/webapp/xcview/html/bought.html
@@ -45,6 +45,9 @@
 		
 		.bought{
 			background: none;
+			position: fixed;
+		    top: 0px;
+		    margin-top: 0;
 		}
 		.mui-scroll{
 			background: #fff;
@@ -75,9 +78,10 @@
 		}
 		.mui-pull-bottom-pocket{
 			position: absolute;
-		    bottom: 0rem;
+		    /*bottom: 0rem;*/
 		    height: 40px;
 		    line-height: 40px;
+		    bottom: 0.2rem;
 		}
 		.bought_main .bought_main_list:last-child{
 			/*border-bottom: none;
