--- a/wechat/src/main/webapp/xcview/html/details.html
+++ b/wechat/src/main/webapp/xcview/html/details.html
@@ -306,7 +306,7 @@ $(function(){
 			<div class="grabble_top">
 				
 				<div class="grabble_left" onclick="isLoginJump()">  <!--onclick="isLoginJump()" ---这是上一版的返回点击事件   --> <!-- onclick="window.history.go(-1);" 这版 -->   
-					<div class="grabble_img"><img src="/xcview/images/images/back icon.png" alt="" /></div>
+					<div class="grabble_img"><img src="/xcview/images/backicon.png" alt="" /></div>
 				</div>
 
 				<span class="history_span"></span>
