修改医馆认证时的许可证号验证

--- a/online-web/src/main/webapp/web/html/ResidentHospital.html
+++ b/online-web/src/main/webapp/web/html/ResidentHospital.html
@@ -270,7 +270,7 @@
 
 									<div>
 										<span><em>*</em>药品经营许可证号</span>
-										<input type="text" placeholder="请输入正确的药品经营许可证号" maxlength="18" class="doc_zhicheng doc_zhichengs" />
+										<input type="text" placeholder="请输入正确的药品经营许可证号" maxlength="18" class="doc_zhicheng doc_zhichengss" />
 										<span class="xukeNum_warn warning hide" style="margin-left: 0px;">请输入正确的药品经营许可证号不能为空</span>
 									</div>
 
