--- a/online-web/src/main/webapp/web/html/anchor/curriculum.html
+++ b/online-web/src/main/webapp/web/html/anchor/curriculum.html
@@ -210,13 +210,13 @@
 		</td>
 		<td>
 			{{if course.liveStatus==1}}
-			<a href="javascript:;" style="margin-right: 10px;" onclick="startLive({{course.webinarId}})">进入直播</a>
+			<a href="javascript:;" style="margin-right: 10px;" onclick="startLive('{{course.webinarId}}', '{{course.channelId}}')">进入直播</a>
 			<!--<a href="javascript:;" onclick="startGuestLive({{course.webinarId}})">嘉宾进入</a>-->
-			<a href="javascript:;" onclick="previewLive({{course.webinarId}})">直播预览</a>
+			<!--<a href="javascript:;" onclick="startLive('{{course.webinarId}}', '{{course.channelId}}')">直播预览</a>-->
 			{{else if course.liveStatus==2}}
-			<a href="javascript:;" style="margin-right: 10px;" onclick="startLive({{course.webinarId}})">进入直播</a>
+			<a href="javascript:;" style="margin-right: 10px;" onclick="startLive('{{course.webinarId}}', '{{course.channelId}}')">进入直播</a>
 			<!--<a href="javascript:;" onclick="startGuestLive({{course.webinarId}})">嘉宾进入</a>-->
-			<a href="javascript:;" onclick="previewLive({{course.webinarId}})">直播预览</a>
+			<!--<a href="javascript:;" onclick="startLive('{{course.webinarId}}', '{{course.channelId}}')">直播预览</a>-->
 			{{else if course.liveStatus==0}}
 			<span>直播完成</span>
 			{{/if}}
