--- a/online-web/src/main/webapp/web/html/live-room/live-room.html
+++ b/online-web/src/main/webapp/web/html/live-room/live-room.html
@@ -158,7 +158,15 @@
 			  			<div class="share-icon text-center">
 			  				<p>分享到</p>
 			  				<ul>
-			  					<li><img src="/web/images/video2/weixin.png"/></li>
+			  					<li class="share-weixin">
+			  						<img src="/web/images/video2/weixin.png"/>
+			  						<div class="weixin-wrap">
+			  							<img src="/web/images/sideWeixin.jpg"/>
+			  						</div>
+			  						<div class="slider-sanjiao">
+			  							<img src="/web/images/float_sanjiao.png"/>
+			  						</div>
+			  					</li>
 			  					<li><img src="/web/images/video2/quan.png"/></li>
 			  					<li><img src="/web/images/video2/weibo.png"/></li>
 			  					<li><img src="/web/images/video2/Qq.png"/></li>
@@ -255,12 +263,68 @@
 			  		</div>
 			  		<!--视频模块-->
 			  		<div class="video-main">
-			  			
+			  			<!--文档左侧文件列表高度-->
+			  			<div class="select-document-wrap">
+			  				<div class="modal-list">
+			  					<ul>
+				  					<li class="active">
+				  						<img src="/web/images/1.jpg"/>
+				  						<span></span>
+				  					</li>
+				  					<li>
+				  						<img src="/web/images/1.jpg"/>
+				  						<span></span>
+				  					</li>
+				  					<li>
+				  						<img src="/web/images/1.jpg"/>
+				  						<span></span>
+				  					</li>
+				  					<li>
+				  						<img src="/web/images/1.jpg"/>
+				  						<span></span>
+				  					</li>
+				  					<li>
+				  						<img src="/web/images/1.jpg"/>
+				  						<span></span>
+				  					</li>
+				  					<li>
+				  						<img src="/web/images/1.jpg"/>
+				  						<span></span>
+				  					</li>
+				  					<li>
+				  						<img src="/web/images/1.jpg"/>
+				  						<span></span>
+				  					</li>
+				  					<li>
+				  						<img src="/web/images/1.jpg"/>
+				  						<span></span>
+				  					</li>
+				  					<li>
+				  						<img src="/web/images/1.jpg"/>
+				  						<span></span>
+				  					</li>
+				  					<li>
+				  						<img src="/web/images/1.jpg"/>
+				  						<span></span>
+				  					</li>
+			  					</ul>
+			  				</div>
+			  				<div class="icon-right"></div>
+			  			</div>
+			  			<div class="icon-left hide"></div>
 			  			<!--pages分页-->
-			  			<div class="pages">
-			  				<span class="prve">上一页</span>
-			  				<span class="next">下一页</span>
-			  				<p class="jump-pages">跳到<input maxlength="4" type="text">页<button type="button">确定</button></p>
+			  			<div class="pages">			  				
+			  				<p class="jump-pages">
+			  					<span class="prev">
+			  						<img src="/web/images/live-room/left.png" alt="上一页" />
+			  					</span>
+			  					<span class="now-page">2</span>
+			  					<span class="line">/</span>
+			  					<span class="all-pages">5</span>
+			  					<span class="next">
+			  						<img src="/web/images/live-room/right.png" alt="下一页" />
+			  					</span>
+			  				</p>
 			  			</div>
 			  		</div>
 			  		<!--开始播放按钮模块-->
