--- a/online-web/src/main/webapp/web/html/live-room/live-room.html
+++ b/online-web/src/main/webapp/web/html/live-room/live-room.html
@@ -136,6 +136,26 @@
 			</form>
 		</div>
 		<!--文档弹窗结束-->
+		<!--设置弹窗-->
+		<div class="modal-content setup-modal hide">
+			<div class="comment-setup">
+				<span>摄像头</span>
+				<select name="">
+					<option value="">王总摄像头</option>
+				</select>
+			</div>
+			<div class="comment-setup">
+				<span>麦克风</span>
+				<select name="">
+					<option value="">王总麦克风</option>
+				</select>
+			</div>
+			<div class="comment-setup">
+				<button class="sure" type="button">确认</button>
+				<button class="cancel" type="button">取消</button>
+			</div>
+		</div>
+		<!--设置结束-->
 		<div class="container-fluid" style="height: 100%;">
 			<div class="row" style="height: 100%;">
 				<!--视频区-->
@@ -337,7 +357,7 @@
 			  				<li>
 			  					<img src="/web/images/video-set.png"/>
 			  				</li>
-			  				<li>
+			  				<li class="set-up">
 			  					<img src="/web/images/video-set2.png"/>
 			  				</li>
 			  			</ul>
