--- a/online-web/src/main/webapp/web/html/liveVideo2.html
+++ b/online-web/src/main/webapp/web/html/liveVideo2.html
@@ -714,6 +714,10 @@
 		$('input').placeholder();
 		/* var html = template('',html) */
 	});
+    
+    $("#face").click(function(){
+    	alert("呵呵");
+    })
 </script>
 </body>
 </html>
