--- a/online-web/src/main/webapp/web/html/anchor/curriculum.html
+++ b/online-web/src/main/webapp/web/html/anchor/curriculum.html
@@ -2665,7 +2665,7 @@
 						<p class="warning return_warning4 hide">任职医馆不能为空</p>
 					</div>
 					<div class="name workTime" >
-						<span><em>*</em>坐诊时间</span>
+						<span>坐诊时间</span>
 						<!--<ul style="display: inline-block;vertical-align: middle;" id="u_workTime">
 							<li >一</li>
 							<li>二</li>
