--- a/online-web/src/main/webapp/web/html/anchors_resources.html
+++ b/online-web/src/main/webapp/web/html/anchors_resources.html
@@ -2438,7 +2438,7 @@
 		{{else if status == 1}}
 		<div class="bottomContent_inf text-left">
 			<span>已于{{createTime}}通过认证，享有入驻医师的功能</span><span style="color: red;margin-left: -20px;"></span>
-			<button class="renzhengAgain">重新认证</button> （如信息有更新可重新认证）
+			<button class="renzhengAgain">修改信息</button> （若修改信息，则需重新进行人工审核）
 		</div>
 		{{else if status == 0}}
 		<div class="bottomContent_inf text-left">
