--- a/online-web/src/main/webapp/web/html/live-room/live-room.html
+++ b/online-web/src/main/webapp/web/html/live-room/live-room.html
@@ -159,7 +159,7 @@
 		<div class="container-fluid" style="height: 100%;">
 			<div class="row" style="height: 100%;">
 				<!--视频区-->
-			  <div class="col-md-8 comment-padding" style="height: 100%;">
+			  <div class="col-md-8 comment-padding video-width" style="height: 100%;">
 			  	<div class="content-video">
 			  		<!--分享模块-->
 			  		<div class="share-main =">
@@ -281,8 +281,12 @@
 			  				</li>
 			  			</ul>
 			  		</div>
-			  		<!--视频模块-->
+			  		<!--文档区模块-->
 			  		<div class="video-main">
+			  			<!--文档区-->
+			  			<div class="document-content">
+			  				
+			  			</div>
 			  			<!--文档左侧文件列表高度-->
 			  			<div class="select-document-wrap">
 			  				<div class="modal-list">
