直播间--添加表情包。。

--- a/online-web/src/main/webapp/web/html/liveVideo2.html
+++ b/online-web/src/main/webapp/web/html/liveVideo2.html
@@ -28,11 +28,14 @@
 <script src="/web/js/common_msg.js?version=ce867abddd" type="text/javascript"></script>
 
 <!-- 放大縮小文檔使用文件 -->
-<link rel="stylesheet" href="/web/htmls/jquery.iviewer.css">
+<link rel="stylesheet" href="/web/js/live-streamin-document/jquery.iviewer.css">
 <script type="text/javascript" src="/web/js/live-streamin-document/jquery.js" ></script>
 <script type="text/javascript" src="/web/js/live-streamin-document/jqueryui.js" ></script>
-<script type="text/javascript" src="/web/js/live-streamin-document/jquery.mousewheel.min.js" ></script>
+<!-- <script type="text/javascript" src="/web/js/live-streamin-document/jquery.mousewheel.min.js" ></script> -->
 <script type="text/javascript" src="/web/js/live-streamin-document/jquery.iviewer.js" ></script>
+
+<!-- 測試引入表情文件 -->
+<!-- <script type="text/javascript" src="/web/js/live-room/emotion.json" ></script> -->
 
 <script type="text/javascript">
     var $ = jQuery;
@@ -45,7 +48,34 @@
     });
 </script>
 		<script type="text/javascript">
-			window.onload = function(){
+			$(function(){
+				// 點擊表情開始
+			 	$("#face").click(function(){
+			 		// alert(55555);
+			 		$(".send-face").removeClass("hide");
+			 		$(".send-face-bg").show();
+			 		$(".send-face").show();
+			 		$.ajax({  
+			 			type:"get",
+			 			url:"/web/js/live-room/emoticon.json",
+			 			success:function(data){
+			 				var del="";
+			 				for (var i=0; i<data.length;i++) {
+			 					del+= '<li><img src='+data[i].imgUrl+'></li>'
+			 				}
+			 				$(".send-face").html(del);
+			 			}
+			 		});
+			 	});
+			 	// 點擊表情結束
+
+			 	// 點擊隱藏表情
+			 	$(".send-face-bg").click(function(){  
+			 		$(".send-face").hide();
+			 		$(this).hide();
+			 	});
+
+
 			 	/*作用--点击img让最大的div显示出来,不添加的话点击img会隐藏最大块（这个区域的点击图片都得设置）*/
 		 		$(".video-bottom img").click(function(){  /*礼物图片*/
 			 		$("#userCusEvent").show();
@@ -91,29 +121,18 @@
 			 	/*鼠标放排行榜上查看效果结束*/
 
 
-			 	// 點擊表情開始
-			 	/*$("#face").click(function(){
-			 		$.ajax({
-			 			type:"get",
-			 			url:"/web/js/live-room/emotion.json",
-			 			success:function(data){
-			 				var del="";
-			 				for (var i=0; i<data.length;i++) {
-			 					del+= '<li><img src='+data[i].imgUrl+'></li>'
-			 				}
-			 				$("")
-			 			}
-			 		});
-			 	});*/
-			 	// 點擊表情結束
 
-			};
+
+			});
 		</script>
 <!--新写直播间--css--替换引入微吼css-->
 <!--<lick rel="stylesheet" type="text/css" href="/web/css/live_streamings.css"></lick>-->
 <link rel="stylesheet" type="text/css" href="/web/css/live_streamings.css"/>
 
 <style>
+	.hide{
+		display: none;
+	}
 	/*====隱藏修改視頻后====*/
 	.vjs-control-bar{
 		display: none;
@@ -203,6 +222,9 @@
 	    float: right;
 	    margin-right: 11px;
 	}
+	.send-box{
+		/*background: red;*/
+	}
 </style>
 <script>
 	window.onload = function(){
@@ -225,6 +247,9 @@
 				$("#viewer2").removeClass("doc-img");
 				$("#viewer2").addClass("company-introduce-one");
 				$("#viewer2 img").removeClass("viewer-img");
+
+				// 文檔按鈕隱藏
+				$(".iviewer_common").show();
 			}else{
 				$("#viewer2 img").addClass("viewer-img");
 				$("#viewer2").removeClass("company-introduce-one");
@@ -235,6 +260,8 @@
 				$(".doc").addClass("company-introduces-one");
 				$(".video").addClass("company-introduces-two");
 				$(".video").removeClass("company-introduce-two");
+				// 文檔按鈕隱藏
+				$(".iviewer_common").hide();
 			}
 		})
 	}
@@ -266,10 +293,38 @@
     	display: none;
     }
 
+    /*表情*/
+    .send-face{
+	    width: 308px;
+	    height: 360px;
+	    background: #fff;
+	    position: absolute;
+	    top: -370px;
+    }
+    .send-face-bg{
+    	width: 100%;
+	    height: 499px;
+	    /*background: red;*/
+	    position: absolute;
+	    top: -677px;
+	    left: 0;
+	    display: none;
+	    opacity: 0;
+    }
+    .send-face li{
+	    float: left;
+	    width: 30px;
+	    margin-top: 5px;
+	    margin-bottom: 5px;
+    }
+    .send-face li img{
+    	width: 30px;
+    }
+
 </style>
 </head>
 
-<body style="background: red!important">
+<body style="background0: red!important">
 	
 	<!--  充值的时候余额不足提示框11 -->
 	<div class='mask3' style='padding: 0 20px; bottom: 65px; right: 85px; display: none; position: fixed; text-align: center; color: white; line-height: 60px; height: 60px; background: #000; opacity: 0.5; z-index: 1000; filter: alpha(opacity = 30);'></div>
@@ -422,8 +477,10 @@
 							</ul>
 						</div>
 					</div>
-					<div class=send-box>
-						<a id="filter-msg" href=javascript:; class=lecturer style="left: 40px;"></a> 
+					<div class="send-box">
+						<div class="send-face-bg"></div>
+						<div class="send-face hide"></div>
+						<a id="filter-msg" href="javascript:;" class=lecturer style="left: 40px;"></a> 
 						<a id="face" href="javascript:;" class="face"></a> 
 						<div class="chitchat">
 							<!-- <a id= href="javascript:;" class="send-chat">发送</a> -->
