中医师--主页，banner空值判断。中医师--文字动态，上间距为0

--- a/wechat/src/main/webapp/xcview/html/physician/index.html
+++ b/wechat/src/main/webapp/xcview/html/physician/index.html
@@ -64,6 +64,10 @@
 	.swiper-container-horizontal>.swiper-pagination-bullets, .swiper-pagination-custom, .swiper-pagination-fraction{
 		bottom: 0;
 	}
+
+	.banner_img{
+		display: none;
+	}
 </style>
 
 </head>
