--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -548,7 +548,7 @@
 				{{each items as item i}}
 				{{if item.type == 1}}
 				<!-- 普通动态-->
-				<div class="panel_hide">
+				<div class="panel_hide" style="margin-top: 0;">
 					<div class="essay_main comment_hide panels_essay_main show-text">{{if item.stick}}<span class="stick_img"><img src="/xcview/images/stick.png" alt="" />置顶</span>{{/if}}{{item.content}}</div>
 					<div class="both"></div>
 				</div>
